# ideoplot

./: README.md  pyproject.toml
ideoplot/: __init__.py  cli.py  config.py  core.py  fetch.py  utils.py
tests/: test_basic.py
