[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ideoplot"
version = "1.0.0"
description = "Human genome ideoplot and local gene-region visualisation toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["bioinformatics", "genomics", "ideoplot", "cytogenetics", "matplotlib"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib>=3.6",
    "pandas>=1.5",
    "requests>=2.28",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
ideoplot = "ideoplot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ideoplot*"]
